feat: implement the interface of swagger in controllers and update the tests
