# user-service/src/main/java/com/spring/user_service/dto/userProfile/response/UserProfileGetUserByProfileResponseDTO.java
@@ -1,4 +1,0 @@
-package com.spring.user_service.dto.userProfile.response;
-
-public record UserProfileGetUserByProfileResponseDTO(Long id, String firstName, String lastName, String email) {
-}
